Added better invite guest screen for events. Also implemented a bulk invite. Did pagination in the guest table
